--- a/src/partials/abouthotel.html
+++ b/src/partials/abouthotel.html
@@ -12,18 +12,18 @@
         <div class="img-hotel">
             <picture>
                 <source srcset="
-                                ../img/abouthotel/modern-studio-apartment-desc.jpg   1x,
-                                ../img/abouthotel/modern-studio-apartment-desc-2x.jpg 2x
+                                ./img/abouthotel/modern-studio-apartment-desc.jpg   1x,
+                                ./img/abouthotel/modern-studio-apartment-desc-2x.jpg 2x
                               " media="(min-width: 1280px)" />
                 <source srcset="
-                                ../img/abouthotel/modern-studio-apartment-tab.jpg    1x,
-                                ../img/abouthotel/modern-studio-apartment-tab-2x.jpg 2x
+                                ./img/abouthotel/modern-studio-apartment-tab.jpg    1x,
+                                ./img/abouthotel/modern-studio-apartment-tab-2x.jpg 2x
                               " media="(min-width: 1024px)" />
                 <source srcset="
-                                ../img/abouthotel/modern-studio-apartment-mob.jpg    1x,
-                                ../img/abouthotel/modern-studio-apartment-mob-2x.jpg 2x
+                                ./img/abouthotel/modern-studio-apartment-mob.jpg    1x,
+                                ./img/abouthotel/modern-studio-apartment-mob-2x.jpg 2x
                               " media="(min-width: 320px)" />
-                <img class="border-hotel-one" src="../img/abouthotel/modern-studio-apartment-mob.jpg" alt="modern-studio">
+                <img class="border-hotel-one" src="./img/abouthotel/modern-studio-apartment-mob.jpg" alt="modern-studio">
             </picture>
 
         </div>
@@ -34,62 +34,62 @@
                 mollit. Exercitation veniam consequat sunt nostrud amet.</p>
             <picture>
                 <source srcset="
-                        ../img/abouthotel/hotel-desc.jpg    1x,
-                        ../img/abouthotel/hotel-desc-2x.jpg 2x
+                        ./img/abouthotel/hotel-desc.jpg    1x,
+                        ./img/abouthotel/hotel-desc-2x.jpg 2x
                       " media="(min-width: 1280px)" />
                 <source srcset="
-                    ../img/abouthotel/hotel-tab.jpg    1x,
-                    ../img/abouthotel/hotel-tab-2x.jpg 2x
+                    ./img/abouthotel/hotel-tab.jpg    1x,
+                    ./img/abouthotel/hotel-tab-2x.jpg 2x
                   " media="(min-width: 1024px)" />
                 <source srcset="
-                        ../img/abouthotel/hotel-mob.jpg    1x,
-                        ../img/abouthotel/hotel-mob-2x.jpg 2x
+                        ./img/abouthotel/hotel-mob.jpg    1x,
+                        ./img/abouthotel/hotel-mob-2x.jpg 2x
                       " media="(min-width: 320px)" />
 
-                <img class="border-hotel-two" src="../img/abouthotel/hotel-mob.jpg" alt="hotel">
+                <img class="border-hotel-two" src="./img/abouthotel/hotel-mob.jpg" alt="hotel">
             </picture>
         </div>
         <div class="about-hotel-img">
             
             <picture>
                 <source srcset="
-                                                ../img/abouthotel/white-towel-bed-desc.jpg    1x,
-                                                ../img/abouthotel/white-towel-bed-desc-2x.jpg 2x
+                                                ./img/abouthotel/white-towel-bed-desc.jpg    1x,
+                                                ./img/abouthotel/white-towel-bed-desc-2x.jpg 2x
                                               " media="(min-width: 1280px)" />
                 <source srcset="
-                                            ../img/abouthotel/white-towel-bed-tab.jpg    1x,
-                                            ../img/abouthotel/white-towel-bed-tab-2x.jpg 2x
+                                            ./img/abouthotel/white-towel-bed-tab.jpg    1x,
+                                            ./img/abouthotel/white-towel-bed-tab-2x.jpg 2x
                                           " media="(min-width: 1024px)" />
                 <source srcset="
-                                                ../img/abouthotel/white-towel-bed-mob.jpg    1x,
-                                                ../img/abouthotel/white-towel-bed-mob-2x.jpg 2x
+                                                ./img/abouthotel/white-towel-bed-mob.jpg    1x,
+                                                ./img/abouthotel/white-towel-bed-mob-2x.jpg 2x
                                               " media="(min-width: 320px)" />
 
-                <img class="border-hotel-three" src="../img/abouthotel/white-towel-bed-mob.jpg" alt="white-towel-bed">
+                <img class="border-hotel-three" src="./img/abouthotel/white-towel-bed-mob.jpg" alt="white-towel-bed">
             </picture>
             <picture>
                 <source srcset="
-                                                ../img/abouthotel/hotel-registration-desc.jpg    1x,
-                                                ../img/abouthotel/hotel-registration-desc-2x.jpg 2x
+                                                ./img/abouthotel/hotel-registration-desc.jpg    1x,
+                                                ./img/abouthotel/hotel-registration-desc-2x.jpg 2x
                                               " media="(min-width: 1280px)" />
                 <source srcset="
-                                            ../img/abouthotel/hotel-registration-tab.jpg    1x,
-                                            ../img/abouthotel/hotel-registration-tab-2x.jpg 2x
+                                            ./img/abouthotel/hotel-registration-tab.jpg    1x,
+                                            ./img/abouthotel/hotel-registration-tab-2x.jpg 2x
                                           " media="(min-width: 1024px)" />
                 <source srcset="
-                                                ../img/abouthotel/hotel-registration-mob.jpg    1x,
-                                                ../img/abouthotel/hotel-registration-mob-2x.jpg 2x
+                                                ./img/abouthotel/hotel-registration-mob.jpg    1x,
+                                                ./img/abouthotel/hotel-registration-mob-2x.jpg 2x
                                               " media="(min-width: 320px)" />
             
-                <img class="border-hotel-four" src="../img/abouthotel/hotel-registration-mob.jpg" alt="hotel-registration">
+                <img class="border-hotel-four" src="./img/abouthotel/hotel-registration-mob.jpg" alt="hotel-registration">
             </picture>
         </div>
         <div class="about-hotel-arrow">
             <svg class="about-icon-hotel" width="32" height="32">
-                <use href="../img/icons.svg#arrow-left"></use>
+                <use href="./img/icons.svg#arrow-left"></use>
             </svg>
             <svg class="about-icon-hotel" width="32" height="32">
-                <use href="../img/icons.svg#arrow-right"></use>
+                <use href="./img/icons.svg#arrow-right"></use>
             </svg>
         </div>
     </div>
