--- a/src/css/aboutrest.css
+++ b/src/css/aboutrest.css
@@ -27,12 +27,12 @@
 
 /* Стрелка влево */
 .slick-arrow.slick-prev {
-  right: 64px;
+  right: 114px;
   background: url(../img/aboutrest/cil_arrow-left.svg) no-repeat;
 }
 /* Стрелка вправо */
 .slick-arrow.slick-next {
-  right: 0;
+  right: 50px;
   background: url(../img/aboutrest/cil_arrow-right.svg) 0 0 no-repeat;
 }
 
@@ -97,7 +97,7 @@
 .about-pexels {
   display: flex;
   gap: 20px;
-  margin-bottom: 300px;
+  margin-bottom: 350px;
 }
 .about-text {
   width: 163px;
@@ -106,18 +106,18 @@
   line-height: 1.25;
   letter-spacing: 0.02em;
   color: var(--first-gold-color);
-  margin-top: 70px;
+  
 }
 
 .about-img {
   position: absolute;
   display: flex;
   align-items: center;
-  width: 600px;
+  width: 280px;
   height: 315px;
   min-width: 0;
   gap: 25px;
-  right: 0;
+  bottom: 50px;
   min-width: 0;
   /* margin-bottom: 20px; */
 }
@@ -153,9 +153,10 @@
   .about-arrow {
     margin-left: 285px;
   }
-  .about-img {
-    left: 100px;
-  }
+.about-img{
+  width: 330px;
+  margin-left: 65px;
+}
 }
 
 /* ------- Tab --------- */
@@ -166,6 +167,9 @@
     padding-bottom: 32px;
     padding-left: 47px;
     padding-right: 60px;
+  }
+  .slider .slick-arrow{
+    bottom: 30px;
   }
   .border-one {
     box-shadow: 5px 5px 70px 17px rgba(0, 0, 0, 0.25);
@@ -192,6 +196,7 @@
   }
   .about-pexels {
     gap: 48px;
+    margin-bottom: 262px;
   }
   .img-about-rest {
     position: absolute;
@@ -210,6 +215,7 @@
   .about-img {
     position: absolute;
     padding: 0;
+    width: 468px;
     margin: 0;
     gap: 40px;
     top: 948px;
@@ -231,6 +237,9 @@
     padding-left: 85px;
     padding-right: 85px;
   }
+  .slider .slick-arrow{
+    bottom: -40px;
+  }
   .border-two {
     box-shadow: 2px 2px 60px 2px rgba(0, 0, 0, 0.25);
   }
@@ -243,6 +252,7 @@
   }
   .about-pexels {
     gap: 32px;
+    margin-bottom: 225px;
   }
   .img-about-rest {
     top: -33px;
@@ -251,6 +261,7 @@
   .about-img {
     top: 903px;
     left: 647px;
+    width: 588px;
   }
   .about-arrow {
     /* padding-left: 980px; */
